--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "irc-framework": "^2.5.0",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
-    "vue": "2.0.*"
+    "vue": "^2.1.3",
+    "vue-template-compiler": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -26,13 +27,14 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "chai": "^3.5.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.6.1",
+    "eslint-config-airbnb-base": "^3.0.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
@@ -41,6 +43,8 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
@@ -52,16 +56,13 @@
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
-    "chai": "^3.5.0",
+    "ora": "^0.3.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
-    "phantomjs-prebuilt": "^2.1.3",
-    "ora": "^0.3.0",
-    "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
+    "vue-loader": "^10.0.2",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
