--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "^0.0.4",
     "irc-framework": "^2.5.0",
+    "less": "^2.7.1",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
     "vue": "^2.1.3",
