--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.4",
     "irc-framework": "^2.5.0",
+    "jquery": "^3.1.1",
     "less": "^2.7.1",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
