--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.4",
     "irc-framework": "2.5.3",
-    "jquery": "^3.1.1",
     "less": "^2.7.1",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
     "vue": "^2.1.3",
-    "vue-template-compiler": "^2.1.3"
+    "vue-template-compiler": "^2.1.3",
+    "xhr": "^2.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
