--- a/static/config.json
+++ b/static/config.json
@@ -1,5 +1,6 @@
 {
 	"windowTitle": "Kiwi IRC - The web IRC client",
 	"startupScreen": "customServer",
-	"kiwiServer": "http://{{hostname}}:8081/webirc/kiwiirc/"
+	"kiwiServer": "http://{{hostname}}:8081/webirc/kiwiirc/",
+	"restricted": true
 }
