--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,18 @@
 {
 	"windowTitle": "Kiwi IRC - The web IRC client",
 	"startupScreen": "customServer",
-	"kiwiServer": "http://{{hostname}}:8081/webirc/kiwiirc/",
-	"restricted": true
+	"kiwiServer": "http://107.170.102.129/webirc/kiwiirc/",
+	"restricted": true,
+	"theme": "default",
+	"themes": [
+		{ "name": "Default", "url": "static/themes/default.css" }
+	],
+	"startupOptions" : {
+		"server": "irc.freenode.net",
+		"port": 6667,
+		"tls": false,
+		"direct": false,
+		"channel": "#kiwiirc",
+		"nick": "kiwi-n?"
+	}
 }
