Default kiwiServer hardcoded to a working server. Handy for local dev

--- a/static/config.json
+++ b/static/config.json
@@ -1,7 +1,7 @@
 {
 	"windowTitle": "Kiwi IRC - The web IRC client",
 	"startupScreen": "customServer",
-	"kiwiServer": "http://107.170.102.129/webirc/kiwiirc/",
+	"kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
 	"restricted": true,
 	"theme": "default",
 	"themes": [
