--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@panter/vue-i18next": "^0.5.1",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.4",
+    "html-loader": "^0.5.1",
     "i18next": "^8.4.0",
     "i18next-conv": "^3.0.3",
     "i18next-xhr-backend": "^1.4.1",
@@ -23,6 +24,7 @@
     "less": "^2.7.1",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
+    "uppy": "^0.18.0",
     "vue": "^2.1.3",
     "vue-template-compiler": "^2.1.3",
     "xhr": "^2.3.2"
