--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "uppy": "^0.18.0",
     "vue": "^2.1.3",
     "vue-template-compiler": "^2.1.3",
+    "webpack-bundle-analyzer": "^2.9.0",
     "xhr": "^2.3.2"
   },
   "devDependencies": {
