--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-xhr-backend": "^1.4.1",
     "irc-framework": "^2.9.1",
     "less": "^2.7.1",
+    "less-loader": "^4.0.5",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
     "uppy": "^0.18.0",
