--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
     "irc-framework": "^2.9.1",
     "less": "^2.7.1",
     "less-loader": "^4.0.5",
+    "css-loader": "^0.25.0",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
     "uppy": "^0.18.0",
     "vue": "^2.1.3",
     "vue-template-compiler": "^2.1.3",
     "webpack-bundle-analyzer": "^2.9.0",
-    "xhr": "^2.3.2"
-  },
-  "devDependencies": {
+    "xhr": "^2.3.2",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
@@ -40,25 +39,32 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
-    "chai": "^3.5.0",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.6.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
+    "json-loader": "^0.5.4",
+    "shelljs": "^0.7.4",
+    "url-loader": "^0.5.7",
+    "vue-loader": "^10.0.2",
+    "webpack": "^1.13.2",
+    "webpack-merge": "^0.14.1",
+    "ora": "^0.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "eslint": "^3.6.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-html": "^1.3.0",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-friendly-formatter": "^2.0.5"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "connect-history-api-fallback": "^1.1.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
     "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
-    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
@@ -69,16 +75,10 @@
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
-    "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
-    "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.2",
-    "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
