--- a/package.json
+++ b/package.json
@@ -8,54 +8,58 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "translate": "node build/locales.js",
-    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.1.2",
+    "babel-loader": "7.1.1",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.25.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-vue": "^4.1.0",
+    "event-emitter": "^0.3.5",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
-    "font-awesome-webpack": "^0.0.4",
+    "font-awesome-webpack": "^0.0.5-beta.2",
+    "function-bind": "^1.0.2",
     "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.8.1",
     "i18next": "^8.4.0",
     "i18next-conv": "^3.0.3",
     "i18next-xhr-backend": "^1.4.1",
-    "irc-framework": "^2.9.1",
+    "irc-framework": "^2.10.3",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^4.0.5",
-    "css-loader": "^0.25.0",
+    "ora": "^0.3.0",
+    "shelljs": "^0.7.4",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
     "uppy": "^0.18.0",
-    "vue": "^2.1.3",
-    "vue-template-compiler": "^2.1.3",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "xhr": "^2.3.2",
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
-    "file-loader": "^0.9.0",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
-    "json-loader": "^0.5.4",
-    "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.2",
-    "webpack": "^1.13.2",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^0.14.1",
-    "ora": "^0.3.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "eslint": "^3.6.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-friendly-formatter": "^2.0.5"
+    "xhr": "^2.3.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -64,19 +68,18 @@
     "express": "^4.13.3",
     "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
+    "karma-sinon-chai": "^1.3.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^2.0.9",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.3",
-    "sinon": "^1.17.3",
+    "sinon": "^4.1.4",
     "sinon-chai": "^2.8.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2"
