--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "author": "Darren <darren@darrenwhitlen.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "build": "node build/build.js",
     "translate": "node build/locales.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
+  },
+  "engines": {
+    "node": ">6",
+    "npm": ">=5"
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
@@ -23,8 +27,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -37,6 +42,7 @@
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.5-beta.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "function-bind": "^1.0.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.8.1",
@@ -47,7 +53,12 @@
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^4.0.5",
+    "node-notifier": "^5.2.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^0.3.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.10",
+    "postcss-url": "^7.3.0",
     "shelljs": "^0.7.4",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
@@ -58,6 +69,7 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.11.0",
     "webpack-merge": "^0.14.1",
     "xhr": "^2.3.2"
   },
