--- a/static/config.json
+++ b/static/config.json
@@ -13,7 +13,9 @@
 		"tls": false,
 		"direct": false,
 		"channel": "#kiwiirc",
-		"nick": "kiwi-n?"
+		"nick": "kiwi-n?",
+		"infoBackground": "https://source.unsplash.com/random/?nature",
+		"infoContent": "<h1>Welcome to the test client</h1>"
 	},
 	"embedly": {
 		"key": ""
