New way of handling background images for the main content section has been implemented.

--- a/static/config.json
+++ b/static/config.json
@@ -13,7 +13,9 @@
 		"tls": false,
 		"direct": false,
 		"channel": "#kiwiirc",
-		"nick": "kiwi-n?"
+		"nick": "kiwi-n?",
+		"infoContent": "Kiwi Rocks",
+		"infoBackground": "https://source.unsplash.com/random/?nature"
 	},
 	"embedly": {
 		"key": ""
