--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "engines": {
-    "node": ">6",
-    "npm": ">=5"
+    "node": ">=6",
+    "npm": ">=3"
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
