--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "translate": "node build/locales.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs"
+    "lint:eslint": "eslint --ext .js,.vue src test/unit/specs",
+    "lint:stylelint": "stylelint \"src/**/*.{vue,htm,html,css,sss,less,scss}\"",
+    "lint": "npm run lint:eslint && npm run lint:stylelint",
+    "lint:fix": "npm run lint:eslint -- --fix && npm run lint:stylelint -- --fix"
   },
   "engines": {
     "node": ">=6",
@@ -33,6 +36,7 @@
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-friendly-formatter": "^2.0.5",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.8.0",
@@ -60,6 +64,9 @@
     "postcss-loader": "^2.0.10",
     "postcss-url": "^7.3.0",
     "shelljs": "^0.7.4",
+    "stylelint": "^8.4.0",
+    "stylelint-config-standard": "^18.0.0",
+    "stylelint-webpack-plugin": "^0.10.1",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
     "uppy": "^0.18.0",
