--- a/test/unit/.eslintrc
+++ b/test/unit/.eslintrc
@@ -5,5 +5,9 @@
   "globals": {
     "expect": true,
     "sinon": true
-  }
+  },
+  "rules": {
+  	"func-names": 0,
+  	"prefer-arrow-callback": 0,
+  },
 }
