--- a/package.json
+++ b/package.json
@@ -64,11 +64,12 @@
     "postcss-loader": "^2.0.10",
     "postcss-url": "^7.3.0",
     "shelljs": "^0.7.4",
+    "sockjs-client": "^1.1.1",
+    "strftime": "^0.9.2",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-webpack-plugin": "^0.10.1",
-    "sockjs-client": "^1.1.1",
-    "strftime": "^0.9.2",
+    "tinycon": "^0.6.8",
     "uppy": "^0.18.0",
     "url-loader": "^0.5.7",
     "vue": "^2.5.13",
