Components now only contain colourings for elemnts, the components file's styling only relates to layout. The concept theme has been renamed 'Default' and has been restructed so it's far easier to find what you wish to edit.

--- a/static/config.json
+++ b/static/config.json
@@ -3,9 +3,9 @@
 	"startupScreen": "welcome",
 	"kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
 	"restricted": true,
-	"theme": "Concept",
+	"theme": "Default",
 	"themes": [
-		{ "name": "Concept", "url": "static/themes/concept2" }
+		{ "name": "Default", "url": "static/themes/default" }
 	],
 	"startupOptions" : {
 		"server": "irc.freenode.net",
