Desktop changes to topic, uservue, appsettings and messagelist styling.

--- a/static/config.json
+++ b/static/config.json
@@ -12,7 +12,7 @@
 		"port": 6667,
 		"tls": false,
 		"direct": false,
-		"channel": "#testing22",
+		"channel": "#ubuntu",
 		"nick": "kiwi-n?"
 	},
 	"embedly": {
