--- a/static/config.json
+++ b/static/config.json
@@ -5,7 +5,8 @@
 	"restricted": true,
 	"theme": "Default",
 	"themes": [
-		{ "name": "Default", "url": "static/themes/default" }
+		{ "name": "Default", "url": "static/themes/default" },
+		{ "name": "Dark", "url": "static/themes/dark" }
 	],
 	"startupOptions" : {
 		"server": "irc.freenode.net",
