New Design Concept (#246)
* Adding in the Concept theme file so Prawn Salad may add in HTML elements. This is a new fork, so there should be no conflicts.

* User count and channel settings button in header

* Sidebar hidden by default

* New channel and filtering inputs moved to statebrowser

* current work on the new concept theme.
Things to note:
 - user profile name and user profile avatar section (statebrowser) are not outputting as variables
 - Sidebar width and shadow over text area upon activation are not final
 - channel options button in the container header does not function

* Add in ability for clicking on useername in chat to open user list.
Changed shadow from being an :after on kiwi to the messagelist instead so the containerHeader is visible

* uiState object passed within the container component. Allows multiple aprts of the UI to open/close parts of the UI

* ContainerUiState tidying

* Catering for IRCds not sending RPL_LISTSTART

* Updating the styling of the concept theme, main changes include:
 - Resizing the sidebar
 - fixing index of elements so they work better together
 - Started work on the new checkbox and input styling (Not complete, in development )
 - user profile in statebrowser has been changed to settings
 - Overflow scroll applied and tested to scrolling containers
 - Leave Channel button moved , changed to absolute position
 -  The user 'userBox' has been added to this build
 -  The 'disconnected; message has been added to this build
 -  various smaller styling tweaks as I get ready for mobile build

* Settings button now displays kiwi settings when clicked.

* Repeater message styling fixes

*  - Containerheader options (chan options, users, leave) only show up now if you are in a channel (connected)
 - Restyled the mesage avatat using the Kiwi HTML
 - Restyled the spacing of the user messages to be alot better
 - Restyled the 'connected' message to be full width, with no margin, to make 

--- a/static/config.json
+++ b/static/config.json
@@ -3,16 +3,17 @@
 	"startupScreen": "welcome",
 	"kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
 	"restricted": true,
-	"theme": "default",
+	"theme": "Default",
 	"themes": [
-		{ "name": "Default", "url": "static/themes/default" }
+		{ "name": "Default", "url": "static/themes/default" },
+		{ "name": "Dark", "url": "static/themes/dark" }
 	],
 	"startupOptions" : {
 		"server": "irc.freenode.net",
 		"port": 6667,
 		"tls": false,
 		"direct": false,
-		"channel": "#kiwiirc",
+		"channel": "#ubuntu",
 		"nick": "kiwi-n?"
 	},
 	"embedly": {
