--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "engines": {
     "node": ">=6",
-    "npm": ">=3" 
+    "npm": ">=3"
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
@@ -34,8 +34,8 @@
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.5.0",
@@ -74,6 +74,7 @@
     "stylelint-config-standard": "^18.0.0",
     "stylelint-webpack-plugin": "^0.10.1",
     "tinycon": "^0.6.8",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "uppy": "^0.18.0",
     "url-loader": "^0.5.7",
     "vue": "^2.5.13",
