--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "engines": {
     "node": ">=6",
-    "npm": ">=3" 
+    "npm": ">=3"
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
@@ -27,15 +27,15 @@
     "babel-loader": "7.1.1",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.5.0",
