--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "engines": {
     "node": ">=6",
-    "npm": ">=3" 
+    "npm": ">=3"
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
@@ -34,8 +34,8 @@
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.5.0",
@@ -105,6 +105,7 @@
     "phantomjs-prebuilt": "^2.1.3",
     "sinon": "^4.1.4",
     "sinon-chai": "^2.8.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2"
   }
