--- a/static/config.json
+++ b/static/config.json
@@ -9,7 +9,7 @@
 		{ "name": "Dark", "url": "static/themes/dark" }
 	],
 	"startupOptions" : {
-		"server": "irc.chillspot.org",
+		"server": "irc.freenode.net",
 		"port": 6667,
 		"tls": false,
 		"direct": false,
