--- a/static/config.json
+++ b/static/config.json
@@ -6,7 +6,12 @@
 	"theme": "Default",
 	"themes": [
 		{ "name": "Default", "url": "static/themes/default" },
-		{ "name": "Dark", "url": "static/themes/dark" }
+        { "name": "Coffee", "url": "static/themes/coffee" },
+		{ "name": "GrayFox", "url": "static/themes/grayfox" },
+		{ "name": "Nightswatch", "url": "static/themes/nightswatch" },
+		{ "name": "Osprey", "url": "static/themes/osprey" },
+		{ "name": "Radioactive", "url": "static/themes/radioactive" },
+		{ "name": "Sky", "url": "static/themes/sky" }
 	],
 	"startupOptions" : {
 		"server": "irc.freenode.net",
