--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "xhr": "^2.3.2"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "chai": "^3.5.0",
     "connect-history-api-fallback": "^1.1.0",
     "eventsource-polyfill": "^0.9.6",
