--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint:eslint": "eslint --ext .js,.vue src test/unit/specs",
-    "lint:stylelint": "stylelint \"src/**/*.{vue,htm,html,css,sss,less,scss}\"",
+    "lint:stylelint": "stylelint \"**/*.{vue,htm,html,css,sss,less,scss}\"",
     "lint": "npm run lint:eslint && npm run lint:stylelint",
     "lint:fix": "npm run lint:eslint -- --fix && npm run lint:stylelint -- --fix",
     "gendocs": "rm -rf srcdocs/ && jsdoc -c jsdoc.json"
