--- a/package.json
+++ b/package.json
@@ -95,16 +95,16 @@
     "inject-loader": "^2.0.1",
     "jsdoc": "^3.5.5",
     "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.3.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.9",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
-    "phantomjs-prebuilt": "^2.1.3",
+    "puppeteer": "^1.8.0",
     "sinon": "^4.1.4",
     "sinon-chai": "^2.8.0",
     "webpack-dev-middleware": "^1.8.3",
