Update circleci config for ChromeHeadless

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - checkout
 
+      - run: sudo apt-get update
+      - run: sudo apt-get -y install libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxi6 libxtst6 libnss3 libcups2 libxss1 libxrandr2 libasound2 libpangocairo-1.0-0 libatk1.0-0 libatk-bridge2.0-0 libgtk-3-0
+
       # Download and cache dependencies
       - restore_cache:
           keys:
