--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "i18next": "^8.4.0",
     "i18next-conv": "^3.0.3",
     "i18next-xhr-backend": "^1.4.1",
+    "ip-regex": "2.1.0",
     "irc-framework": "^3.1.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
