--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "translate": "node build/locales.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
-    "lint:eslint": "eslint --ext .js,.vue src test/unit/specs",
+    "lint:eslint": "eslint --rulesdir config/eslint/rules/ --ext .js,.vue src test/unit/specs",
     "lint:stylelint": "stylelint \"src/**/*.{vue,htm,html,css,sss,less,scss}\"",
     "lint": "npm run lint:eslint && npm run lint:stylelint",
     "lint:fix": "npm run lint:eslint -- --fix && npm run lint:stylelint -- --fix",
