--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^4.3.1",
+    "core-js": "^3.0.0-beta.3",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
     "eslint": "^4.15.0",
@@ -84,6 +85,7 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^0.14.1",
+    "whatwg-fetch": "^3.0.0",
     "xhr": "^2.3.2"
   },
   "devDependencies": {
