--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^0.14.1",
+    "whatwg-fetch": "^3.0.0",
     "xhr": "^2.3.2"
   },
   "devDependencies": {
