--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "semver": "^5.6.0",
     "sinon": "^4.1.4",
     "sinon-chai": "^2.8.0",
     "webpack-dev-middleware": "^1.8.3",
