--- a/static/config.json
+++ b/static/config.json
@@ -7,12 +7,8 @@
     "themes": [
         { "name": "Default", "url": "static/themes/default" },
         { "name": "Dark", "url": "static/themes/dark" },
-        { "name": "Coffee", "url": "static/themes/coffee" },
-        { "name": "GrayFox", "url": "static/themes/grayfox" },
         { "name": "Nightswatch", "url": "static/themes/nightswatch" },
-        { "name": "Osprey", "url": "static/themes/osprey" },
-        { "name": "Radioactive", "url": "static/themes/radioactive" },
-        { "name": "Sky", "url": "static/themes/sky" }
+        { "name": "Radioactive", "url": "static/themes/radioactive" }
     ],
     "startupOptions" : {
         "server": "irc.freenode.net",
