- UPDATE: Styling for the selfUser component - NEW: layout for the selfUser component - UPDATE: Transitions + Themes for the selfUser component

--- a/static/config.json
+++ b/static/config.json
@@ -15,8 +15,8 @@
         { "name": "Sky", "url": "static/themes/sky" }
     ],
     "startupOptions" : {
-        "server": "irc.freenode.net",
-        "port": 6667,
+        "server": "irc.snoonet.org",
+        "port": 6697,
         "tls": false,
         "direct": false,
         "channel": "#kiwiirc-default",
