UPDATE: reset the config file to Kiwi default, since I've finished testing the away status

--- a/static/config.json
+++ b/static/config.json
@@ -15,8 +15,8 @@
         { "name": "Sky", "url": "static/themes/sky" }
     ],
     "startupOptions" : {
-        "server": "irc.snoonet.org",
-        "port": 6697,
+        "server": "irc.freenode.net",
+        "port": 6667,
         "tls": false,
         "direct": false,
         "channel": "#kiwiirc-default",
