--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-webpack-plugin": "^0.10.1",
+    "sweetalert": "^2.1.2",
     "tinycon": "^0.6.8",
     "url-loader": "^0.5.7",
     "vue": "^2.5.13",
     "vue-loader": "^13.7.0",
+    "vue-multiselect": "^2.1.3",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.0",
