--- a/static/config.json
+++ b/static/config.json
@@ -15,7 +15,7 @@
         { "name": "Sky", "url": "static/themes/sky" }
     ],
     "startupOptions" : {
-        "server": "irc.snoonet.org",
+        "server": "irc.freenode.net",
         "port": 6667,
         "tls": false,
         "direct": false,
