--- a/static/config.json
+++ b/static/config.json
@@ -2,7 +2,7 @@
     "windowTitle": "Kiwi IRC - The web IRC client",
     "startupScreen": "welcome",
     "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
-    "restricted": true,
+    "restricted": false,
     "theme": "Default",
     "themes": [
         { "name": "Default", "url": "static/themes/default" },
@@ -15,7 +15,7 @@
         { "name": "Sky", "url": "static/themes/sky" }
     ],
     "startupOptions" : {
-        "server": "irc.freenode.net",
+        "server": "irc.snoonet.org",
         "port": 6667,
         "tls": false,
         "direct": false,
