--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,6 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
-    "startupScreen": "welcome",
+    "startupScreen": "znclogin",
     "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
     "restricted": true,
     "theme": "Default",
