--- a/static/config.json
+++ b/static/config.json
@@ -1,14 +1,18 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
-    "startupScreen": "znclogin",
+    "startupScreen": "welcome",
     "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
     "restricted": true,
     "theme": "Default",
     "themes": [
         { "name": "Default", "url": "static/themes/default" },
         { "name": "Dark", "url": "static/themes/dark" },
+        { "name": "Coffee", "url": "static/themes/coffee" },
+        { "name": "GrayFox", "url": "static/themes/grayfox" },
         { "name": "Nightswatch", "url": "static/themes/nightswatch" },
-        { "name": "Radioactive", "url": "static/themes/radioactive" }
+        { "name": "Osprey", "url": "static/themes/osprey" },
+        { "name": "Radioactive", "url": "static/themes/radioactive" },
+        { "name": "Sky", "url": "static/themes/sky" }
     ],
     "startupOptions" : {
         "server": "irc.freenode.net",
