--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "core-js": "^2.5.7",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
+    "css-vars-ponyfill": "^1.17.0",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
