--- a/static/config.json
+++ b/static/config.json
@@ -1,8 +1,8 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
-    "startupScreen": "welcome",
+    "startupScreen": "znc",
     "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
-    "restricted": true,
+    "restricted": false,
     "theme": "Default",
     "themes": [
         { "name": "Default", "url": "static/themes/default" },
@@ -26,5 +26,6 @@
         "key": ""
     },
     "plugins": [
+
     ]
 }
