--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,6 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
-    "startupScreen": "znc",
+    "startupScreen": "kiwiBnc",
     "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
     "restricted": false,
     "theme": "Default",
