- Add ELITE theme to the core config file - Fixed channel list themeing on the Elite theme - Fixed Dark theme channel filters colours - Fixed Nightswatch theme channel filters colours ( removed bottom border from button )

--- a/static/config.json
+++ b/static/config.json
@@ -12,7 +12,8 @@
         { "name": "Nightswatch", "url": "static/themes/nightswatch" },
         { "name": "Osprey", "url": "static/themes/osprey" },
         { "name": "Radioactive", "url": "static/themes/radioactive" },
-        { "name": "Sky", "url": "static/themes/sky" }
+        { "name": "Sky", "url": "static/themes/sky" },
+        { "name": "ELITE", "url": "static/themes/elite" }
     ],
     "startupOptions" : {
         "server": "irc.freenode.net",
