--- a/static/config.json
+++ b/static/config.json
@@ -13,7 +13,7 @@
         { "name": "Osprey", "url": "static/themes/osprey" },
         { "name": "Radioactive", "url": "static/themes/radioactive" },
         { "name": "Sky", "url": "static/themes/sky" },
-        { "name": "ELITE", "url": "static/themes/elite" }
+        { "name": "Elite", "url": "static/themes/elite" }
     ],
     "startupOptions" : {
         "server": "irc.freenode.net",
