--- a/static/config.json
+++ b/static/config.json
@@ -1,8 +1,8 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
     "startupScreen": "welcome",
-    "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
-    "restricted": false,
+    "kiwiServer": "http://192.168.1.14:40010/webirc/kiwiirc/",
+    "restricted": true,
     "theme": "Default",
     "themes": [
         { "name": "Default", "url": "static/themes/default" },
@@ -12,21 +12,36 @@
         { "name": "Nightswatch", "url": "static/themes/nightswatch" },
         { "name": "Osprey", "url": "static/themes/osprey" },
         { "name": "Radioactive", "url": "static/themes/radioactive" },
-        { "name": "Sky", "url": "static/themes/sky" },
-        { "name": "Elite", "url": "static/themes/elite" }
+        { "name": "Sky", "url": "static/themes/sky" }
     ],
-    "startupOptions" : {
-        "server": "irc.freenode.net",
+    "startupOptions": {
+        "server": "192.168.1.14",
         "port": 6667,
         "tls": false,
         "direct": false,
-        "channel": "#kiwiirc-default",
-        "nick": "kiwi-n?"
+        "channel": "#x",
+        "nick": "u?",
+        "autoConnect": true
     },
+    "warnOnExit": false,
+    "showRaw": true,
     "embedly": {
         "key": ""
     },
     "plugins": [
-
-    ]
+        {
+            "name": "olm",
+            "url": "http://192.168.1.14:40050/plugin-olm.js"
+        }
+    ],
+    "disabled": [
+        {
+            "name": "fileuploader",
+            "url": "http://192.168.1.14:40040/plugin-fileuploader.js"
+        }
+    ],
+    "fileuploader": {
+        "server": "http://192.168.1.14:40030/files",
+        "maxFileSize": 10485760
+    }
 }
