--- a/package.json
+++ b/package.json
@@ -22,86 +22,74 @@
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.5.1",
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
-    "babel-loader": "7.1.1",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
     "compare-versions": "^3.4.0",
-    "copy-webpack-plugin": "^4.3.1",
-    "core-js": "^2.5.7",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.8",
+    "core-js": "^3.0.1",
     "css-vars-ponyfill": "^1.17.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-rulesdir": "^0.1.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.5.0",
     "event-emitter": "^0.3.5",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
-    "font-awesome-webpack": "^0.0.5-beta.2",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "function-bind": "^1.0.2",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.8.1",
     "i18next": "^8.4.0",
     "i18next-conv": "^3.0.3",
     "i18next-xhr-backend": "^1.4.1",
     "ip-regex": "2.1.0",
     "irc-framework": "../irc-framework/irc-framework-4.2.0.tgz",
-    "json-loader": "^0.5.4",
     "json5": "^2.1.0",
-    "less": "^2.7.1",
-    "less-loader": "^4.0.5",
-    "node-notifier": "^5.2.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^0.3.0",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.10",
-    "postcss-url": "^7.3.0",
-    "semver": "^5.6.0",
-    "shelljs": "^0.7.4",
     "sockjs-client": "^1.1.1",
     "strftime": "^0.9.2",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
-    "stylelint-webpack-plugin": "^0.10.1",
     "tinycon": "^0.6.8",
-    "url-loader": "^0.5.7",
     "vue": "^2.6.10",
-    "vue-loader": "^14.2.4",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^0.14.1",
     "whatwg-fetch": "^3.0.0",
     "xhr": "^2.3.2"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "@devpodio/font-awesome-webpack": "^1.0.0",
+    "autoprefixer": "^9.5.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-istanbul": "^5.1.4",
     "chai": "^3.5.0",
     "connect-history-api-fallback": "^1.1.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-rulesdir": "^0.1.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.2",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "function-bind": "^1.1.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
     "jsdoc": "^3.5.5",
+    "json-loader": "^0.5.7",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
@@ -109,14 +97,36 @@
     "karma-sinon-chai": "^1.3.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.9",
+    "karma-webpack": "^4.0.0-rc.6",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "lolex": "^1.4.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "mocha": "^3.1.0",
+    "node-notifier": "^5.4.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "ora": "^3.4.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
+    "semver": "^6.0.0",
+    "shelljs": "^0.8.3",
     "sinon": "^4.1.4",
     "sinon-chai": "^2.8.0",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "url-loader": "^1.1.2",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-middleware": "^3.6.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-hot-middleware": "^2.24.4",
+    "webpack-merge": "^4.2.1",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
